// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create a triangle in bottom direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="bottom"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="bottom"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom={null}
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="bottom"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        id={null}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding={null}
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width={null}
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom={null}
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="bottom"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "SDAxT",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding={null}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width={null}
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-bwzfXH SDAxT"
            contentEditable={false}
            direction="bottom"
            disabled={false}
            height={null}
            id={null}
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width={null}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in down direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="down"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="down"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom={null}
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="down"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        id={null}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding={null}
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width={null}
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom={null}
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="down"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "ewmlHu",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding={null}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width={null}
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-bwzfXH ewmlHu"
            contentEditable={false}
            direction="down"
            disabled={false}
            height={null}
            id={null}
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width={null}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in left direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="left"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="left"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom={null}
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="left"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        id={null}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding={null}
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width={null}
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom={null}
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="left"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "etiWmI",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding={null}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width={null}
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-bwzfXH etiWmI"
            contentEditable={false}
            direction="left"
            disabled={false}
            height={null}
            id={null}
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width={null}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in right direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom={null}
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        id={null}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding={null}
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width={null}
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom={null}
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "bCWftt",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding={null}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width={null}
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-bwzfXH bCWftt"
            contentEditable={false}
            direction="right"
            disabled={false}
            height={null}
            id={null}
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width={null}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in top direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="top"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="top"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom={null}
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="top"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        id={null}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding={null}
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width={null}
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom={null}
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="top"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "SDAxT",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding={null}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width={null}
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-bwzfXH SDAxT"
            contentEditable={false}
            direction="top"
            disabled={false}
            height={null}
            id={null}
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width={null}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Create a triangle in up direction 1`] = `
<Triangle
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="up"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  padding={null}
  selected={false}
  sizing="large"
  style={
    Object {
      "fill": "red",
      "stroke": "green",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="up"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="large"
    style={
      Object {
        "fill": "red",
        "stroke": "green",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.svg
        bottom={null}
        className="ui-triangle test-class"
        contentEditable={false}
        controlled={true}
        direction="up"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        id={null}
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        nobase={false}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        obj="Triangle"
        padding={null}
        preserveAspectRatio="xMidYMid meet"
        selected={false}
        sizing="large"
        style={
          Object {
            "fill": "red",
            "stokeWidth": "2px",
            "stroke": "green",
          }
        }
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        version="1.1"
        viewBox="0 0 40 40"
        visible={true}
        width={null}
        xcss={null}
        xmlns="http://www.w3.org/2000/svg"
      >
        <StyledComponent
          bottom={null}
          className="ui-triangle test-class"
          contentEditable={false}
          controlled={true}
          direction="up"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "SDAxT",
                "rules": Array [
                  "
	transform: ",
                  [Function],
                  ";

	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          id={null}
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          nobase={false}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          obj="Triangle"
          padding={null}
          preserveAspectRatio="xMidYMid meet"
          selected={false}
          sizing="large"
          style={
            Object {
              "fill": "red",
              "stokeWidth": "2px",
              "stroke": "green",
            }
          }
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          version="1.1"
          viewBox="0 0 40 40"
          visible={true}
          width={null}
          xcss={null}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="ui-triangle test-class sc-bwzfXH SDAxT"
            contentEditable={false}
            direction="up"
            disabled={false}
            height={null}
            id={null}
            preserveAspectRatio="xMidYMid meet"
            selected={false}
            style={
              Object {
                "fill": "red",
                "stokeWidth": "2px",
                "stroke": "green",
              }
            }
            version="1.1"
            viewBox="0 0 40 40"
            width={null}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="0,35, 20,10 40,35"
            />
          </svg>
        </StyledComponent>
      </styled.svg>
    </ThemeProvider>
  </Wrapper>
</Triangle>
`;

exports[`Test creation of a Triangle control 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="up"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  nobase={false}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  obj="Triangle"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "fill": "black",
      "stokeWidth": "2px",
      "stroke": "black",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.svg
    bottom={null}
    className="ui-triangle test-class"
    contentEditable={false}
    controlled={true}
    direction="up"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    id={null}
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    obj="Triangle"
    padding={null}
    preserveAspectRatio="xMidYMid meet"
    selected={false}
    sizing="normal"
    style={
      Object {
        "fill": "black",
        "stokeWidth": "2px",
        "stroke": "black",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    version="1.1"
    viewBox="0 0 40 40"
    visible={true}
    width={null}
    xcss={null}
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="0,35, 20,10 40,35"
    />
  </styled.svg>
</Wrapper>
`;

exports[`Test retrieval of Triangle props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "up",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "nobase": false,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "obj": "Triangle",
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "fill": "black",
    "stokeWidth": "2px",
    "stroke": "black",
  },
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
